# tt-ad-exchange-auction-service

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: cli.py  main.py  startup.py
app/builders/: base.py
app/builders/api/: bidding.py  statistics.py
app/commands/: generate_auction_data.py  load_data.py
app/config/: logging_config.py  settings.py
app/db/: session.py
app/db/dao/: bidder.py  common.py  supply.py
app/db/migrations/: env.py
app/db/migrations/versions/: 2025-12-10_22-23___db4ba6e6734b.py  2025-12-12_16-39_add_performance_indexes__d737f97f479f.py
app/db/models/: base.py  bidder.py  supply.py
app/dependencies/: rate_limit.py
app/models/: bid.py  settings.py  statistics.py
app/models/api/request/: bid.py
app/models/api/response/: bid.py  statistics.py  supply.py
app/models/dao/: bidder.py  supply.py
app/models/services/: bidding.py  statistics.py
app/redis_db/: client.py
app/routers/: bid.py  root.py  stat.py  supply.py
app/services/: bidding.py  rate_limiter.py  statistics.py
tests/: test_bidding_service.py  test_rate_limiter.py  test_statistics_service.py
