[project]
name = "tt-ad-exchange-auction-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.17.2",
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.124.2",
    "pydantic-settings>=2.12.0",
    "redis>=7.1.0",
    "typer>=0.15.1",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.2",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = [
    "tests",
]

[tool.ruff]
line-length = 120
show-fixes = true

[tool.ruff.lint]
exclude = [
    "tests/*",
    ".gitlab/*"
]
ignore = ["ANN401", "B008", "ANN003", "ANN002"]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # flake8-annotations
    "ANN",
]
